; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfganal.c_flow_active_insn_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfganal.c_flow_active_insn_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOBBER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @flow_active_insn_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flow_active_insn_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @active_insn_p(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %28

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @PATTERN(i32 %9)
  %11 = call i64 @GET_CODE(i32 %10)
  %12 = load i64, i64* @CLOBBER, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %27

14:                                               ; preds = %8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @PATTERN(i32 %15)
  %17 = call i32 @XEXP(i32 %16, i32 0)
  %18 = call i64 @REG_P(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %27

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @PATTERN(i32 %21)
  %23 = call i32 @XEXP(i32 %22, i32 0)
  %24 = call i64 @REG_FUNCTION_VALUE_P(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %28

27:                                               ; preds = %20, %14, %8
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %26, %7
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @active_insn_p(i32) #1

declare dso_local i64 @GET_CODE(i32) #1

declare dso_local i32 @PATTERN(i32) #1

declare dso_local i64 @REG_P(i32) #1

declare dso_local i32 @XEXP(i32, i32) #1

declare dso_local i64 @REG_FUNCTION_VALUE_P(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
